[gd_scene load_steps=5 format=3 uid="uid://c33h0117r3wt2"]

[ext_resource type="Texture2D" uid="uid://ca4ptldxet5ti" path="res://assets/objectsPNG/bakery storage.png" id="1_8qf3k"]
[ext_resource type="Script" path="res://scripts/objects/bakery_storage.gd" id="1_7038u"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rrjh6"]
size = Vector2(114, 14)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_feked"]
size = Vector2(114, 45)

[node name="BakeryStorage" type="Node2D"]
script = ExtResource("1_7038u")

[node name="StaticBody2D" type="StaticBody2D" parent="."]
collision_layer = 3
collision_mask = 3

[node name="Sprite2D" type="Sprite2D" parent="StaticBody2D"]
position = Vector2(0, -18)
scale = Vector2(0.265957, 0.265957)
texture = ExtResource("1_8qf3k")

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
shape = SubResource("RectangleShape2D_rrjh6")

[node name="StorageUI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 20.0
offset_bottom = 20.0

[node name="CanvasLayer" type="CanvasLayer" parent="StorageUI"]

[node name="GridContainer" type="GridContainer" parent="StorageUI/CanvasLayer"]
layout_direction = 2
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -67.5
offset_top = -251.5
offset_right = 67.5
offset_bottom = -116.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/h_separation = 150
theme_override_constants/v_separation = 150
columns = 6

[node name="InteractableArea2D" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractableArea2D"]
position = Vector2(0, 2.5)
shape = SubResource("RectangleShape2D_feked")
debug_color = Color(0.79396, 0.424826, 0.0676237, 0.42)

[connection signal="body_entered" from="InteractableArea2D" to="." method="_on_interactable_area_2d_body_entered"]
[connection signal="body_exited" from="InteractableArea2D" to="." method="_on_interactable_area_2d_body_exited"]
